--- a/apps/front/i18n/et.json
+++ b/apps/front/i18n/et.json
@@ -415,7 +415,8 @@
     "submit": "Salvesta",
     "submitted_thanks": "Täname vastuse eest.",
     "submitted_disclaimer": " Vastust kasutatakse anonüümselt, et konsulteerimise tulemusi analüüsida.",
-    "select": "Vali"
+    "select": "Vali",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1437,5 +1438,10 @@
     "country_subtitle": "Riigi valik määrab ära saadaolevad konsulteerimised.",
     "language_title": "Teie keel",
     "confirm": "Kinnita"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
