--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -420,7 +420,8 @@
     "submit": "Išsaugoti",
     "submitted_thanks": "Ačiū už atsakymą.",
     "submitted_disclaimer": " Jis bus anonimiškai naudojamas analizuojant konsultacijų rezultatus.",
-    "select": "Pasirinkti"
+    "select": "Pasirinkti",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1464,5 +1465,10 @@
     "country_subtitle": "Konsultacijų galimybė priklauso nuo to, kokią šalį pasirinkote.",
     "language_title": "Jūsų kalba",
     "confirm": "Patvirtinti"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
