--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -420,7 +420,8 @@
     "submit": "Зберегти",
     "submitted_thanks": "Дякуємо за вашу відповідь.",
     "submitted_disclaimer": " Її буде використано анонімно для аналізу результатів публічної консультації.",
-    "select": "Обрати"
+    "select": "Обрати",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1464,5 +1465,10 @@
       "ethical_charter": " Цей <a href=\"https://assets.make.org/consultations/ethical_charter_uk.pdf\" target=\"_blank\">Кодекс модерації (нова вкладка)</a> розроблений відповідно до Кодексу етики, який гарантує нейтральність, незалежність та прозорість Make.org:",
       "code_penal": "Кримінальний кодекс України визначає дискримінацію як «умисні дії, спрямовані на розпалювання національної, регіональної, расової чи релігійної ворожнечі та ненависті, на приниження національної честі та гідності, або образа почуттів громадян у зв’язку з їхніми релігійними переконаннями, а також пряме чи непряме обмеження прав або встановлення прямих чи непрямих привілеїв громадян за ознаками раси, кольору шкіри, політичних, релігійних та інших переконань, статі, інвалідності, етнічного та соціального походження, майнового стану, місця проживання, за мовними або іншими ознаками». (Стаття 161-§1)."
     }
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
