--- a/apps/widget/i18n/da.json
+++ b/apps/widget/i18n/da.json
@@ -209,7 +209,8 @@
     "submit": "Gem",
     "submitted_thanks": "Tak for dit svar.",
     "submitted_disclaimer": " Det vil blive brugt anonymt til at analysere resultaterne af høringen.",
-    "select": "Vælg"
+    "select": "Vælg",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -353,5 +354,10 @@
     "title": "Høringen er nu afsluttet",
     "description": "Vil du gerne vide mere om dette emne? Få mere at vide om operationen og hold dig orienteret om alle vores borgerhøringer ved at registrere dig på Make.org",
     "link": "Opdag vores virksomhed"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
