--- a/apps/widget/i18n/hr.json
+++ b/apps/widget/i18n/hr.json
@@ -211,7 +211,8 @@
     "submit": "Spremi",
     "submitted_thanks": "Hvala vam na odgovoru.",
     "submitted_disclaimer": " Odgovor se upotrebljava anonimno kako bi se analizirali rezultati rasprave.",
-    "select": "Odaberi"
+    "select": "Odaberi",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -356,5 +357,10 @@
     "title": "Konzultacije su sada gotove",
     "description": "Želite li znati više o ovoj temi? Otkrijte ostatak operacije i ostanite informirani o svim našim konzultacijama s građanima registracijom na Make.org",
     "link": "Otkrijte naše djelovanje"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
