--- a/apps/widget/i18n/sl.json
+++ b/apps/widget/i18n/sl.json
@@ -213,7 +213,8 @@
     "submit": "Shrani",
     "submitted_thanks": "Hvala za odgovor.",
     "submitted_disclaimer": " Anonimno bo uporabljen za analiziranje rezultatov posvetovanja.",
-    "select": "Izberi"
+    "select": "Izberi",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -359,5 +360,10 @@
     "title": "Posvetovanje je zaključeno",
     "description": "Želite izvedeti več o tej temi? Več informacij o operaciji in obveščanje o vseh naših posvetovanjih z državljani pridobite z registracijo na Make.org",
     "link": "Odkrijte naše delovanje"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
