--- a/apps/widget/i18n/sv.json
+++ b/apps/widget/i18n/sv.json
@@ -209,7 +209,8 @@
     "submit": "Registrera",
     "submitted_thanks": "Tack för ditt svar.",
     "submitted_disclaimer": " Det kommer att användas anonymt för att analysera resultatet av samrådet.",
-    "select": "Välj"
+    "select": "Välj",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -353,5 +354,10 @@
     "title": "Samrådet är nu avslutat",
     "description": "Vill du veta mer om det här ämnet? Ta reda på mer om verksamheten och håll dig informerad om alla våra medborgarsamråd genom att registrera dig på Make.org",
     "link": "Upptäck vår verksamhet"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
