--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -396,7 +396,8 @@
     "submit": "Регистрация",
     "submitted_thanks": "Благодарим Ви за отговора.",
     "submitted_disclaimer": " Той ще бъде използван анонимно за анализ на резултатите от консултацията.",
-    "select": "Изберете"
+    "select": "Изберете",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1437,5 +1438,10 @@
       "ethical_charter": "Настоящата политика за модериране е изготвена в съответствие с <a href=\"https://assets.make.org/consultations/ethical_charter_bg.pdf\" target=\"_blank\">Етичната политика (нов раздел)</a>, която гарантира неутралността, независимостта и прозрачността на Make.org.",
       "code_penal": "В закона за защита от дискриминация се казва \"Забранена е всяка пряка или непряка дискриминация, основана на пол, раса, народност, етническа принадлежност, човешки геном, гражданство, произход, религия или вяра, образование, убеждения, политическа принадлежност, лично или обществено положение, увреждане, възраст, сексуална ориентация, семейно положение, имуществено състояние или на всякакви други признаци, установени в закон или в международен договор, по който Република България е страна”. (Член 4 (1))."
     }
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
