--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1430,12 +1430,18 @@
     "submit": "Save",
     "submitted_thanks": "Thank you for your answer.",
     "submitted_disclaimer": "It will be used anonymously to analyse the results of the consultation.",
-    "select": "Choose"
+    "select": "Choose",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "language_switch": {
     "country_title": "Your country",
     "country_subtitle": "Your country selection defines the available consultations.",
     "language_title": "Your language",
     "confirm": "Confirm"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
