--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -415,7 +415,8 @@
     "submit": "Regisztráció",
     "submitted_thanks": "Köszönjük a válaszát.",
     "submitted_disclaimer": " Az adatokat névtelenül fogjuk felhasználni a konzultáció eredményeinek elemzésére.",
-    "select": "Kiválasztás"
+    "select": "Kiválasztás",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1437,5 +1438,10 @@
     "country_subtitle": "A kiválasztott országtól függ, hogy milyen konzultációkat érhet el.",
     "language_title": "Az Ön nyelve",
     "confirm": "Megerősítés"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
