--- a/apps/front/i18n/it.json
+++ b/apps/front/i18n/it.json
@@ -401,7 +401,8 @@
     "submit": "Salva",
     "submitted_thanks": "Grazie per la tua risposta.",
     "submitted_disclaimer": " Sarà usata in modo anonimo per analizzare i risultati della consultazione.",
-    "select": "Seleziona"
+    "select": "Seleziona",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1464,5 +1465,10 @@
       "ethical_charter": "Questa carta di moderazione è stata elaborata in conformità con la <a href=\"https://assets.make.org/consultations/ethical_charter_it.pdf\" target=\"_blank\">Carta etica (nuova scheda)</a> che garantisce la neutralità, l’indipendenza e la trasparenza di Make.org.",
       "code_penal": "Tra i principi fondamentali della Costituzione italiana si trova, all’articolo 3, proprio il principio di uguaglianza e non discriminazione: “Tutti i cittadini hanno pari dignità sociale e sono eguali davanti alla legge, senza distinzione di sesso, di razza, di lingua, di religione, di opinioni politiche, di condizioni personali e sociali. È compito della Repubblica rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l’eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l’effettiva partecipazione di tutti i lavoratori all’organizzazione politica, economica e sociale del Paese”."
     }
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
