--- a/apps/front/i18n/pt.json
+++ b/apps/front/i18n/pt.json
@@ -420,7 +420,8 @@
     "submit": "Registar",
     "submitted_thanks": "Obrigado pela sua resposta.",
     "submitted_disclaimer": " Será utilizada de forma anónima para analisar os resultados da consulta.",
-    "select": "Selecionar"
+    "select": "Selecionar",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -1464,5 +1465,10 @@
     "country_subtitle": "A sua escolha de país determina as consultas disponíveis.",
     "language_title": "A sua língua",
     "confirm": "Confirmar"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
