--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -344,7 +344,8 @@
     "submit": "Speichern",
     "submitted_thanks": "Danke für deine Antwort.",
     "submitted_disclaimer": "Sie wird anonym verwendet, um die Ergebnisse der Konsultation zu analysieren.",
-    "select": "Auswählen"
+    "select": "Auswählen",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "maintenance": {
     "subtitle": "Ups, es tut uns leid! Make.org wird gerade gewartet"
@@ -353,5 +354,10 @@
     "title": "Die Konsultation ist nun beendet",
     "description": "Du möchtest mehr über dieses Thema erfahren? Entdecke den weiteren Verlauf unserer Aktion und bleibe über alle unsere Bürgerkonsultationen informiert, indem du dich auf Make.org registrierst",
     "link": "Entdecke unsere Aktion"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
