--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -344,7 +344,8 @@
     "submit": "Save",
     "submitted_thanks": "Thank you for your answer.",
     "submitted_disclaimer": "It will be anonymously used to analyse the results of the consultation.",
-    "select": "Choose"
+    "select": "Choose",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "maintenance": {
     "subtitle": "Oops, we're sorry! Make.org is currently down for maintenance"
@@ -353,5 +354,10 @@
     "title": "The consultation is now over",
     "description": "Do you want to learn more about this cause? Be aware of the rest of the project and new consultations by registering on Make.org",
     "link": "Discover our project"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
