--- a/apps/widget/i18n/es.json
+++ b/apps/widget/i18n/es.json
@@ -192,7 +192,8 @@
     "submit": "Guardar",
     "submitted_thanks": "Gracias por tu respuesta.",
     "submitted_disclaimer": " Se utilizará de forma anónima para analizar los resultados de la consulta.",
-    "select": "Seleccionar"
+    "select": "Seleccionar",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -356,5 +357,10 @@
     "title": "La consulta está cerrada",
     "description": "¿Quiere saber más sobre este tema? Obtenga más información sobre la operación y manténgase informado sobre todas nuestras consultas ciudadanas registrándose en Make.org",
     "link": "Descubra nuestro funcionamiento"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
