--- a/apps/widget/i18n/hu.json
+++ b/apps/widget/i18n/hu.json
@@ -209,7 +209,8 @@
     "submit": "Regisztráció",
     "submitted_thanks": "Köszönjük a válaszát.",
     "submitted_disclaimer": " Az adatokat névtelenül fogjuk felhasználni a konzultáció eredményeinek elemzésére.",
-    "select": "Kiválasztás"
+    "select": "Kiválasztás",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -353,5 +354,10 @@
     "title": "A konzultáció lezárult",
     "description": "Szeretne többet megtudni erről a témáról? Tudjon meg többet a műveletről, és maradjon naprakész az összes polgári konzultációnkról, ha regisztrál a Make.org oldalon",
     "link": "Fedezze fel működésünket"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
