--- a/apps/widget/i18n/it.json
+++ b/apps/widget/i18n/it.json
@@ -192,7 +192,8 @@
     "submit": "Salva",
     "submitted_thanks": "Grazie per la tua risposta.",
     "submitted_disclaimer": " Sarà usata in modo anonimo per analizzare i risultati della consultazione.",
-    "select": "Seleziona"
+    "select": "Seleziona",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -356,5 +357,10 @@
     "title": "La consultazione è chiusa",
     "description": "Volete saperne di più su questo argomento? Per saperne di più sull'operazione e rimanere informati su tutte le nostre consultazioni cittadine, registratevi su Make.org",
     "link": "Scoprite la nostra attività"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
