--- a/apps/widget/i18n/sk.json
+++ b/apps/widget/i18n/sk.json
@@ -209,7 +209,8 @@
     "submit": "Uložiť",
     "submitted_thanks": "Ďakujeme za vašu odpoveď.",
     "submitted_disclaimer": " Použije sa anonymne na analýzu výsledkov konzultácie.",
-    "select": "Vybrať"
+    "select": "Vybrať",
+    "continue": "@@demographics_card.continue|fr:Suivant"
   },
   "proposal_submit": {
     "form": {
@@ -353,5 +354,10 @@
     "title": "Konzultácie sú už uzavreté",
     "description": "Chcete sa o tejto téme dozvedieť viac? Získajte viac informácií o tejto operácii a buďte informovaní o všetkých našich konzultáciách s občanmi, ak sa zaregistrujete na stránke Make.org",
     "link": "Objavte našu prevádzku"
+  },
+  "demographics_intro": {
+    "title": "@@demographics_intro.title|fr:Vous y êtes presque ! Partagez vos informations socio-démographiques pour que vos votes soit bien pris en compte et pour garantir une meilleure représentativité.",
+    "protect": "@@demographics_intro.protect|fr:Pas d’inquiétude vos données sont protégées 🔒",
+    "next": "@@demographics_intro.next|fr:Suivant"
   }
 }
